unpackaged/main/default/objects/API_Connector__IndueD_Service_Settings__c/API_Connector__IndueD_Service_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>IndueD Service Settings</label>
</CustomObject>