unpackaged/main/default/objects/API_Connector__IndueD_Service_Settings__c/fields/API_Connector__API_Token__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__API_Token__c</fullName>
    <label>API Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>