unpackaged/main/default/objects/API_Connector__IndueD_Service_Settings__c/fields/API_Connector__IndueD_DueDiligence_ID__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IndueD_DueDiligence_ID__c</fullName>
    <label>IndueD DueDiligence ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>