unpackaged/main/default/objects/API_Connector__IndueD_Service_Settings__c/fields/API_Connector__IndueD_DuediligencesFinal_FPM_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IndueD_DuediligencesFinal_FPM_Status__c</fullName>
    <label>IndueD DuediligencesFinal FPM Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>