unpackaged/main/default/objects/API_Connector__IndueD_Service_Settings__c/fields/API_Connector__IndueD_ReportsFinal_URL__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IndueD_ReportsFinal_URL__c</fullName>
    <label>IndueD ReportsFinal URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>