unpackaged/main/default/objects/API_Connector__IndueD_Service_Settings__c/fields/API_Connector__tags__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__tags__c</fullName>
    <label>tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>